--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Foster AI Call and Biography Generation",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node server.js"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   },
   "dependencies": {
     "express": "^4.18.2",
